# go2-perception-pipeline

./: CMakeLists.txt  README.md  package.xml
config/: go2_perception.rviz  perception_world.world
src/: ground_filter_node.cpp
